fixed social btns alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -180,33 +180,45 @@ padding:0;
 	color: #444;
 }
 
+#social-btns{
+	width: 400px;
+	height: 30px;
+	margin:0 auto;
+	padding-top:10px;
+
+}
+
 #twitter-btn{
 	width:70px;
 	height:22px;
 	overflow:hidden;
-	display:inline-block;
+	float:left;
+	margin-left:20px;
 	margin-right: 20px;
-	margin-top: 10px;
 }
 
 #facebook-btn{
 	width:86px;
 	height:22px;
 	overflow:hidden;
-	display:inline-block;
+	float:left;
 	margin-right:20px;
-	position: relative;
-	top: -2px;
-	margin-top: 10px;
 }
 
 #google-btn{
 	width:70px;
 	height:22px;
 	overflow:hidden;
-	display:inline-block;
+	float:left;
 	margin-right:20px;
-	margin-top: 10px;
+}
+
+#linked-btn{
+	width:70px;
+	height:22px;
+	overflow:hidden;
+	float:left;
+	margin-right:20px;
 }
 
 #btn-copy{
@@ -293,7 +305,7 @@ padding:0;
 
 #copyright{
 	width:100px;
-	font-size:12px;
+	font-size:10px;
 	color:rgb(199, 216, 235);
 	margin-left:49%;
 }
